--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <header>
       <h1>Local Time:</h1>
     </header>
-    <div id="clock"></div>
+    <div id="clock">
+      <div id="daysOfWeek"></div>
+      <div id="time"></div>
+    </div>
     
   </div>
   <script src="style.js"></script>
